@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.12816 2006/02/06 12:14:26 rpaulo Exp $
+$NetBSD: CHANGES,v 1.12817 2006/02/06 12:44:44 abs Exp $
 
 Changes to the packages collection and infrastructure in 2006:
 
@@ -834,3 +834,4 @@ Changes to the packages collection and infrastructure in 2006:
 	Updated lang/php5 to 5.1.2 [martti 2006-02-06]
 	Updated pkgtools/pkglint to 4.56 [rillig 2006-02-06]
 	Updated x11/xcb to 2.4 [rpaulo 2006-02-06]
+	Updated pkgtools/pkg_chk to 1.76 [abs 2006-02-06]
